
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int frontend_orbis_exec (char*,int) ;
 int orbis_fork_mode ;

__attribute__((used)) static void frontend_orbis_exitspawn(char *s, size_t len)
{
   bool should_load_game = 0;

   if (orbis_fork_mode == 128)
      return;

   switch (orbis_fork_mode)
   {
      case 129:
         should_load_game = 1;
         break;
      case 128:
      default:
         break;
   }

   frontend_orbis_exec(s, should_load_game);
}
