; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_orbis.c_frontend_orbis_exitspawn.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_orbis.c_frontend_orbis_exitspawn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@orbis_fork_mode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @frontend_orbis_exitspawn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frontend_orbis_exitspawn(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* @orbis_fork_mode, align 4
  %7 = icmp eq i32 %6, 128
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %18

9:                                                ; preds = %2
  %10 = load i32, i32* @orbis_fork_mode, align 4
  switch i32 %10, label %13 [
    i32 129, label %11
    i32 128, label %12
  ]

11:                                               ; preds = %9
  store i32 1, i32* %5, align 4
  br label %14

12:                                               ; preds = %9
  br label %13

13:                                               ; preds = %9, %12
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i8*, i8** %3, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @frontend_orbis_exec(i8* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %8
  ret void
}

declare dso_local i32 @frontend_orbis_exec(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
